Fixed alignment of pagination

--- a/client/src/components/dashboard/workflows/workflows.scss
+++ b/client/src/components/dashboard/workflows/workflows.scss
@@ -166,6 +166,7 @@
     }
 
     .pagination-cont {
+        align-items: center;
         .pagin-config {
             align-items: center;
             .per-page-label {
